<resources>
    <string name="app_name">Address</string>
    <string name="hello_world">Address</string>
    <string name="app_desc">Address search plugin with Nominatim geocoding</string>
    <string name="address_plugin_preferences">Address Settings</string>
    <string name="largerButton">Keo Enlarge and move the dropdown</string>
    <string name="smallerButton">Enlarge and move the dropdown</string>
    <string name="showSearchIcon">Show a custom map widget</string>
    <string name="recyclerViewBtn">Show a sample recycler view</string>
    <string name="tabViewBtn">Show a sample tab view</string>
    <string name="overlayViewBtn">Show a sample overlay view</string>
    <string name="dropdownBtn">Show a sample dropdown view</string>
    <string name="fly">Pan to a location on the map</string>
    <string name="specialWheelMarker">Create a marker with an special radial menu</string>
    <string name="addAnAircraft">Create an aircraft marker</string>
    <string name="svgMarker">Create a marker with a SVG Icon</string>
    <string name="staleoutMarker">Create a marker that will stale out</string>
    <string name="addStream">Connect to a content stream</string>
    <string name="removeStream">Remove the content stream</string>
    <string name="coordinateEntry">Show a coordinate entry view</string>
    <string name="itemInspect">Inspect the CoT of a map item</string>
    <string name="customType">Create a custom type of marker</string>
    <string name="singlePoint2525">Create single point</string>
    <string name="customMenuDefault">Create a custom menu default for friendly types that is a copy of the hostile menu.   When unselected it will change it back.</string>
    <string name="customMenuFactory">Custom Menu Factory</string>
    <string name="listRoutes">List all of the routes on the map</string>
    <string name="addXRoute">Add a route to the map</string>
    <string name="reXRoute">Reroute the route on the map</string>
    <string name="dropRoute">Drop a new route on the map without displaying the option dialog</string>
    <string name="emergency">Create an emergency 911 alert</string>
    <string name="no_emergency">Remove the emergency 911 alert</string>
    <string name="addRectangle">Draw a rectangle on the map</string>
    <string name="drawShapes">Draw a shape on the map</string>
    <string name="groupAdd">Add a shape to a custom group called MyCustomGroup for rendering in the overlay manager</string>
    <string name="associations">Demonstrate the proper way to add two map items and an association</string>
    <string name="rbcircle">Draw a Range and Bearing circle on the map</string>
    <string name="externalGps">Simulate an attached GPS</string>
    <string name="surfaceAtCenter">Display the surface height at the center of the screen</string>
    <string name="fakeContentProvider">Connect to a fake content provider</string>
    <string name="pluginNotification">Display an android notification</string>
    <string name="videoLauncher">Example of how to display a video with an overlay layer</string>
    <string name="notificationSpammer">Spam android notifications</string>
    <string name="notificationWithOptions">Shows how to produce a notification with buttons</string>
    <string name="addToolbarItem">Sample of how to add / remove a toolbar item</string>
    <string name="addCountToIcon">Sample of how to add a count to a toolbar</string>
    <string name="cameraLauncher">Launch the camera</string>
    <string name="imageAttach">Create a marker with an attached image</string>
    <string name="webView">Demonstrate how to launch a plugin with a web view.</string>
    <string name="addLayer">Demonstrate how to add a layer.</string>
    <string name="addMultiLayer">Demonstrate how to add a multilayer.</string>
    <string name="addHeatMap">Demonstrate how to add a HeatMap.</string>
    <string name="speechToText">Display a Speech to Text example</string>
    <string name="hookNavigation">A simple example that hooks into navigation events and toasts events pertaining to navigation.</string>
    <string name="importFile">Demonstrate how to import a sample file.</string>
    <string name="sendFile">Demonstrate how to send a sample file.</string>
    <string name="generateDataPackage">Generates a sample data package</string>
    <string name="filePromptDataPackage">Demonstrate prompting for a data package</string>
    <string name="getImage">Demonstrates how to display an image</string>
    <string name="bumpControl">Demonstrates how to use the accelerometer</string>
    <string name="issLocation">Demonstrates how to plot the ISS location from a open source site</string>
    <string name="lrfTool">Demonstrates LRF capture tool</string>
    <string name="lrfFire">Sample of LRF Fire</string>
    <string name="sensorFOV">Demonstrates how to plot a sensor Field of View</string>
    <string name="action_settings">Settings</string>
    <string name="speech_prompt_numeric_grid_zone">Please say the 2 digits of the Grid Zone&#8230;</string>
    <string name="speech_prompt_alpha_grid_zone">Please say the 1 letter of the Grid Zone&#8230;</string>
    <string name="speech_prompt_square_id">"Please say the two letter Square Identifier&#8230;</string>
    <string name="speech_prompt_easting">Please say the five digit easting&#8230;</string>
    <string name="speech_prompt_northing">Please say the five digit northing&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="tap_to_speak_mgrs_loc">Tap to state the Coordinates and Marker Type</string>
    <string name="tap_to_speak_mgrs">Tap to state the MGRS Coordinates</string>
    <string name="tap_to_speak_marker_type">Tap to state the Marker Type</string>
    <string name="marker_type">Marker Type</string>
    <string name="drop_marker">Drop Marker</string>
    <string name="mgrs">MGRS Coordinates</string>
    <string name="speech_hint_12345">12345</string>
    <string name="speech_hint_hostile">Hostile</string>
    <string name="speech_hint_u">U</string>
    <string name="speech_hint_47">47</string>
    <string name="speech_hint_AA">AA</string>
    <string name="example_header">Header Example</string>
    <string name="example_footer">Footer Example</string>
    <string name="example_layer_description">This is an example layer.</string>
    <string name="summary">Shows a quick test of launching the file browser</string>
    <string name="full_example_title">Full String Example</string>
    <string name="full_example_summary">Shows a quick example of how to reference both a title and a summary as a String resource</string>
    <string name="speech_prompt_Activity">Say what you want to do</string>
    <string name="speechToActivity">Tell ATAK what you want to do</string>
    <string name="activity_not_found">Activity not found</string>
    <string name="activity_found">Activity Found</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="Remove_item_warn">Are you sure you want to remove </string>
    <string name="Manual_mode">Please enter target manually</string>
    <string name="download_map_layer_msg">Download map layer using a shape</string>
    <string name="no_mobile_imagery_found">No mobile imagery found. Make sure you\'re switched to the "Mobile" tab.</string>
    <string name="map_layer_download">Map Layer Download</string>
    <string name="job_status_downloading">Downloading tiles…</string>
    <string name="job_status_connecting">Connecting to server…</string>
    <string name="map_layer_download_error">Map layer download error occurred.</string>
    <string name="map_layer_download_complete">Map layer download has completed.</string>
    <string name="download_tiles_progress">%s tiles</string>
    <string name="download_layers_progress">%s layers</string>
    <string name="download_time_left">Est. Time Left: %s</string>
    <string name="map_screenshot_desc">Capture a screenshot of the map and save to a file</string>
    <string name="map_screenshot_started">Capturing map screenshot…</string>
    <string name="map_screenshot_finished">Finished capturing map screenshot to %s</string>
    <string-array name="drop_a_array">
        <item>dropped</item>
        <item>drop</item>
        <item>put</item>
        <item>place</item>
        <item>plot</item>
    </string-array>
    <string-array name="at_array">
        <item>at</item>
        <item>by</item>
        <item>around</item>
        <item>near</item>
        <item>on</item>
    </string-array>
    <string-array name="quick_array">
        <item>quick</item>
        <item>drive</item>
        <item>go to</item>
    </string-array>
    <string-array name="navigate_array">
        <item>navigate</item>
        <item>route</item>
        <item>drive</item>
        <item>go to</item>
    </string-array>
    <string-array name="from_array">
        <item>from</item>
    </string-array>
    <string-array name="bloodhound_array">
        <item>bloodhound to a</item>
        <item>bloodhound to</item>
        <item>bloodhound</item>
        <item>Bloodhound</item>
    </string-array>
    <string-array name="a_array">
        <item>dropped</item>
        <item>drop</item>
        <item>put</item>
        <item>place</item>
        <item>a</item>
        <item>an</item>
        <item>the</item>
    </string-array>
    <string-array name="nine_line_array">
        <item>nine line</item>
        <item>9 line</item>
        <item>nine-line</item>
        <item>9-line</item>
    </string-array>
    <string-array name="compass_array">
        <item>compass</item>
    </string-array>
    <string-array name="brightness_array">
        <item>brightness</item>
        <item>alpha</item>
    </string-array>
    <string-array name="delete_array">
        <item>delete</item>
        <item>remove</item>
        <item>kill</item>
    </string-array>
    <string-array name="pairing_array">
        <item>pair</item>
        <item>link</item>
        <item>measure</item>
    </string-array>
    <string-array name="open_array">
        <item>open</item>
        <item>show</item>
    </string-array>
    <string-array name="details_array">
        <item>details</item>
        <item>detail menu</item>
        <item>detail page</item>
    </string-array>
    <string-array name="emergency_array">
        <item>emergency</item>
        <item>help</item>
        <item>alert</item>
    </string-array>
    <string name="powered_by_gotak">Powered by GoTAK</string>
    <string name="search_hint">Search for a location...</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="clear_button_desc">Clear search text</string>
    <string name="close_button_desc">Close search panel</string>
    <string name="section_locations">Locations</string>
    <string name="section_recent">Recent</string>
    <string name="clear_all">Clear All</string>
    <string name="offline_data_button">Offline Data</string>
    <string name="tab_address">Search</string>
    <string name="tab_nearby">Nearby</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="loc_me">Me</string>
    <string name="loc_map">Map</string>
    <string name="decrease_radius">Decrease radius</string>
    <string name="increase_radius">Increase radius</string>
    <string name="section_nearby_results">Nearby Results</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="add_to_map">Add to Map</string>
    <string name="broadcast">Broadcast</string>
</resources>